--- a/Project2/Part_1/PSS Section 3 - JFreeCharts/JFreeCharts/pom.xml
+++ b/Project2/Part_1/PSS Section 3 - JFreeCharts/JFreeCharts/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.example</groupId>
+    <groupId>idk</groupId>
     <artifactId>demo</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -12,5 +12,22 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
+
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.jfree/jfreechart -->
+        <dependency>
+            <groupId>org.jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.5.0</version>
+        </dependency>
+
+        <!-- Correct dependency for Apache Commons Math 3.x -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>3.6.1</version> <!-- Updated version -->
+        </dependency>
+
+    </dependencies>
 
 </project>
